beta/css.css
/*DOCUMENT*/

@font-face {
    font-family: Raleway;
    src: url("Roboto-Bold.ttf");
}
@font-face {
    font-family: Raleway-Light;
    src: url("Raleway-Light.ttf");
}
@font-face {
    font-family: 'SSB';
    font-style: normal;
    font-weight: 900;
    src: local('Source Sans Pro Black'), local('SourceSansPro-Black'), url(http://themes.googleusercontent.com/static/fonts/sourcesanspro/v7/toadOcfmlt9b38dHJxOBGHiec-hVyr2k4iOzEQsW1iE.woff) format('woff');
}
body {
    background-color: rgba(253, 251, 251, 1);
    padding: 0px;
    margin: 0px;
}
#content {
    width: 100%;
    height: 110%;
}
.relative {
    position: relative;
}
#bgimg {
    height: auto;
    width: 100%;
}
#content1 {
    background-image: url(bestanden/wiebenik.JPG);
    background-size: 100%;
    background-attachment: fixed;
    height: 100%;
    width: 100%;
}
#name {
    font-family: open sans;
    font-size: 230%;
}
#quote {
    font-size: 125%;
    font-family: Cardo;
}
#content2 {
    margin-top: 10%;
    width: 100%;
    margin-bottom: 10%;
}
#titleBox {
    margin-top: 30%;
    float: right;
    background-color: white;
    padding: 3%;
}
h2 {
    font-family: open sans;
    font-size: 700%;
    margin-top: 0;
    margin-bottom: 0;
    padding-bottom: 1.7%;
    padding-top: 0;
    width: 100%;
    text-align: center;
    background-color: rgb(229, 226, 226)
}
.line {
    background-color: #B40000;
    width: 0%;
    margin-left: auto;
    margin-right: auto;
    margin-top: -1.7%;
    height: 5px;
}
.description {
    font-family: Source Sans Pro;
    font-size: 175%;
    margin-top: 2%;
    margin-bottom: 4%;
    margin-left: 25%;
}
#phone {
    width: 30%;
    margin-right: 10%;
    float: right;
    margin-top: 10%;
}
#project1 {
    margin-top: 0%;
    background-color: #B40000;
    width: 100%;
    overflow: hidden;
}
h3 {
    padding: 0;
    margin: 0;
}
.show1des {
    font-family: Source Sans Pro;
    font-size: 125%;
    color: white;
    margin-left: 10%;
}
#project2 {
    overflow: hidden;
    position: relative;
}
#p1 {
    font-family: open sans;
    font-size: 500%;
    color: white;
    margin-top: 17%;
    margin-left: 10%;
}
#p2 {
    float: right;
    font-family: open sans;
    font-size: 500%;
    margin-top: 15%;
    margin-right: 15%;
}
.show2des {
    font-family: open sans;
    font-size: 2500%;
    /*    color: grey;*/
    color: #B40000;
    position: absolute;
    bottom: 0;
    margin: 0;
    line-height: 75%;
}
#social {
    background-color: rgb(172, 172, 172);
    position: relative;
}
.socitem {
    margin-top: 100px;
    margin-left: 11%;
    float: left;
    width: 300px;
    height: 300px;
    background-color: white;
    border-radius: 50%;
    position: relative;
    overflow: hidden;
}
.soccirc {
    background-color: #B40000;
    border-radius: 50%;
    position: absolute;
    top: 50%;
    left: 50%;
}
.socimg {
    width: 150px;
    margin-left: 25%;
    margin-top: 25%;
    position: absolute;
}
.socdesc {
    color: white;
    top: 73%;
    width: 100%;
    text-align: center;
    position: absolute;
    font-family: open sans;
    font-weight: 600;
    font-size: 200%;
}
#disclaimer {
    text-align: center;
    margin-top: 10px;
    position: absolute;
    bottom: 0;
    margin-bottom: 2px;
    width: 100%;
    color: white;
    font-family: Open Sans;
}
.desBig {
    font-size: 600%;
}
p {
    margin: 0;
    padding: 0;
}

